@@ -1,6 +1,5 @@
 package br.com.henrique.StudentProgress.services;
 
-import br.com.henrique.StudentProgress.controllers.StudentController;
 import br.com.henrique.StudentProgress.exceptions.IdNotFoundException;
 import br.com.henrique.StudentProgress.exceptions.InvalidGradeException;
 import br.com.henrique.StudentProgress.exceptions.InvalidStatusExcepetion;
@@ -13,14 +12,14 @@ import br.com.henrique.StudentProgress.transfer.DTOs.StudentAverageDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.*;
+import org.springframework.data.web.PagedResourcesAssembler;
+import org.springframework.hateoas.*;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.text.SimpleDateFormat;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -31,6 +30,9 @@ class StudentServiceTest {
     @Mock
     private StudentRepository repository;
 
+    @Mock
+    private PagedResourcesAssembler<StudentDTO> assembler;
+
     @InjectMocks
     private StudentService service;
 
@@ -38,31 +40,36 @@ class StudentServiceTest {
     private StudentDTO dto;
 
     @BeforeEach
-    void setup() {
+    void setup() throws Exception {
+        SimpleDateFormat fmt = new SimpleDateFormat("yyyy-MM-dd");
+        Date birth = fmt.parse("1999-05-05");
+
         entity = new Student();
         entity.setId(1L);
         entity.setName("Jane");
+        entity.setBirthDate(birth);
         entity.setCourse("Science");
         entity.setClassSchool("B2");
         entity.setRegistration("REG456");
-        entity.setBirthDate("1999-05-05");
         entity.setNotes(Arrays.asList(5.0, 7.0));
 
         dto = new StudentDTO();
         dto.setId(1L);
         dto.setName("Jane");
+        dto.setBirthDate(birth);
         dto.setCourse("Science");
         dto.setClassSchool("B2");
         dto.setRegistration("REG456");
-        dto.setBirthDate("1999-05-05");
         dto.setNotes(Arrays.asList(5.0, 7.0));
     }
 
     @Test
     void findById_returnsDto() {
         when(repository.findById(1L)).thenReturn(Optional.of(entity));
-        var result = service.findById(1L);
-        assertEquals(dto.getName(), result.getName());
+
+        StudentDTO result = service.findById(1L);
+
+        assertEquals("Jane", result.getName());
         verify(repository).findById(1L);
     }
 
@@ -73,24 +80,37 @@ class StudentServiceTest {
     }
 
     @Test
-    void findAll_returnsList() {
-        when(repository.findAll()).thenReturn(Collections.singletonList(entity));
-        var list = service.findAll();
-        assertEquals(1, list.size());
-        verify(repository).findAll();
+    void findAll_returnsPagedModel() {
+        Pageable pageable = PageRequest.of(0, 12, Sort.by("name").ascending());
+        Page<Student> pageEnt = new PageImpl<>(List.of(entity), pageable, 1);
+        when(repository.findAll(pageable)).thenReturn(pageEnt);
+
+        EntityModel<StudentDTO> model = EntityModel.of(dto);
+        PagedModel.PageMetadata meta = new PagedModel.PageMetadata(12, 0, 1);
+        PagedModel<EntityModel<StudentDTO>> paged = PagedModel.of(List.of(model), meta);
+
+        when(assembler.toModel(any(Page.class), any(Link.class))).thenReturn(paged);
+
+        PagedModel<EntityModel<StudentDTO>> result = service.findAll(pageable);
+
+        assertNotNull(result);
+        assertEquals(1, result.getContent().size());
+        verify(repository).findAll(pageable);
+        verify(assembler).toModel(any(Page.class), any(Link.class));
     }
 
     @Test
     void post_valid_returnsDto() {
         when(repository.save(any(Student.class))).thenReturn(entity);
-        var result = service.post(dto);
-        assertEquals(dto.getName(), result.getName());
+
+        StudentDTO result = service.post(dto);
+        assertEquals("Jane", result.getName());
         verify(repository).save(any(Student.class));
     }
 
     @Test
     void post_invalidGrade_throws() {
-        dto.setNotes(Arrays.asList(-1.0));
+        dto.setNotes(List.of(-1.0));
         assertThrows(InvalidGradeException.class, () -> service.post(dto));
     }
 
@@ -104,8 +124,9 @@ class StudentServiceTest {
     void put_valid_updates() {
         when(repository.findById(1L)).thenReturn(Optional.of(entity));
         when(repository.save(entity)).thenReturn(entity);
-        var result = service.put(dto);
-        assertEquals(dto.getName(), result.getName());
+
+        StudentDTO result = service.put(dto);
+        assertEquals("Jane", result.getName());
         verify(repository).findById(1L);
         verify(repository).save(entity);
     }
@@ -120,30 +141,19 @@ class StudentServiceTest {
     void patch_valid_updatesPartial() {
         when(repository.findById(1L)).thenReturn(Optional.of(entity));
         StudentDTO patchDto = new StudentDTO();
-        patchDto.setName("John");
-        var result = service.patch(1L, patchDto);
-        assertEquals("John", result.getName());
-        assertEquals(entity.getCourse(), result.getCourse());
+        patchDto.setNotes(List.of(9.0));
+
+        StudentDTO result = service.patch(1L, patchDto);
+        assertEquals(9.0, result.getNotes().get(0));
         verify(repository).findById(1L);
         verify(repository).save(entity);
     }
 
     @Test
-    void patch_invalidGrade_throws() {
-        StudentDTO patchDto = new StudentDTO();
-        patchDto.setNotes(Arrays.asList(11.0));
-
-        assertThrows(InvalidGradeException.class, () -> service.patch(1L, patchDto));
-
-        verify(repository, never()).findById(anyLong());
-        verify(repository, never()).save(any());
-    }
-
-
-    @Test
     void delete_existing_deletes() {
         when(repository.findById(1L)).thenReturn(Optional.of(entity));
         doNothing().when(repository).delete(entity);
+
         service.delete(1L);
         verify(repository).delete(entity);
     }
@@ -155,15 +165,18 @@ class StudentServiceTest {
     }
 
     @Test
-    void calculateAverage_approvedAndRecoveryAndFailed() {
+    void calculateAverage_variousStatuses() {
         when(repository.findById(1L)).thenReturn(Optional.of(entity));
-        var avg = service.calculateAverage(1L);
+        // recovery
+        StudentAverageDTO avg = service.calculateAverage(1L);
         assertEquals(StudentStatus.RECOVERY, avg.getStatus());
 
-        entity.setNotes(Arrays.asList(8.0, 7.0, 9.0));
+        // approved
+        entity.setNotes(Arrays.asList(8.0, 9.0));
         avg = service.calculateAverage(1L);
         assertEquals(StudentStatus.APPROVED, avg.getStatus());
 
+        // failed
         entity.setNotes(Arrays.asList(2.0, 3.0));
         avg = service.calculateAverage(1L);
         assertEquals(StudentStatus.FAILED, avg.getStatus());
@@ -184,25 +197,24 @@ class StudentServiceTest {
 
     @Test
     void filterByStatus_validFilters() {
-        Student s1 = new Student(); s1.setId(1L); s1.setNotes(Arrays.asList(8.0, 9.0)); s1.setName("A");
-        Student s2 = new Student(); s2.setId(2L); s2.setNotes(Arrays.asList(5.0, 6.0)); s2.setName("B");
-        Student s3 = new Student(); s3.setId(3L); s3.setNotes(Arrays.asList(2.0, 3.0)); s3.setName("C");
-        when(repository.findAll()).thenReturn(Arrays.asList(s1, s2, s3));
+        Student s1 = new Student(); s1.setId(1L); s1.setNotes(List.of(8.0,9.0)); s1.setName("A");
+        Student s2 = new Student(); s2.setId(2L); s2.setNotes(List.of(5.0,6.0)); s2.setName("B");
+        Student s3 = new Student(); s3.setId(3L); s3.setNotes(List.of(2.0,3.0)); s3.setName("C");
+
+        when(repository.findAll()).thenReturn(List.of(s1,s2,s3));
         when(repository.findById(1L)).thenReturn(Optional.of(s1));
         when(repository.findById(2L)).thenReturn(Optional.of(s2));
         when(repository.findById(3L)).thenReturn(Optional.of(s3));
 
-        List<StudentAverageDTO> approved = service.filterByStatus(StudentStatus.APPROVED);
+        var approved = service.filterByStatus(StudentStatus.APPROVED);
         assertEquals(1, approved.size());
         assertEquals(StudentStatus.APPROVED, approved.get(0).getStatus());
 
-        List<StudentAverageDTO> recovery = service.filterByStatus(StudentStatus.RECOVERY);
+        var recovery = service.filterByStatus(StudentStatus.RECOVERY);
         assertEquals(1, recovery.size());
-        assertEquals(StudentStatus.RECOVERY, recovery.get(0).getStatus());
 
-        List<StudentAverageDTO> failed = service.filterByStatus(StudentStatus.FAILED);
+        var failed = service.filterByStatus(StudentStatus.FAILED);
         assertEquals(1, failed.size());
-        assertEquals(StudentStatus.FAILED, failed.get(0).getStatus());
     }
 
     @Test
